# meetup-ltr

./: README.md  dataset.csv  pyproject.toml  query_ft.npy
meetup_ltr/: ltr.py  ltr_fasttext.py
