[tool.poetry]
name = "meetup-ltr"
version = "0.1.0"
description = ""
authors = ["François Weber <f.weber@qwant.com>"]
readme = "README.md"
packages = [{include = "meetup_ltr"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
rank-bm25 = "^0.2.2"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
watchdog = "^3.0.0"
pytrec-eval = "^0.5"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
